# CTF_NCL_AGENT_O

./: pyproject.toml  setup.sh
my-skill/: SKILL.md
src/ctf_ncl_agent_o/: __init__.py
