[project]
name = "ctf-ncl-agent-o"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tony", email = "ssun1@my.waketech.edu" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
ctf-ncl-agent-o = "ctf_ncl_agent_o:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
